--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/valinka26/hexlet-js/issues"
   },
-  "homepage": "https://github.com/valinka26/hexlet-js#readme"
+  "homepage": "https://github.com/valinka26/hexlet-js#readme",
+  "dependencies": {
+    "lodash": "^4.17.20"
+  }
 }
